Fixed spacing for progress bar

--- a/style.css
+++ b/style.css
@@ -133,7 +133,7 @@ body.long .timer-section {
   justify-content: space-between;
   align-items: center;
   padding: 1rem 0;
-  margin-bottom: 2rem;
+  margin-bottom: 0.5rem;
 }
 
 .top-bar button {
@@ -173,6 +173,9 @@ body.long .top-bar button {
   background-color: white;
   height: 6px;
   overflow: hidden;
+  margin-top: 0;
+  margin-bottom: 1.5rem;
+
 }
 
 /* Progress Bar */
